<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupProfile">

    <TextView
        android:id="@+id/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_your_profile"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:padding="5dp"
        android:text="@string/username"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/setup" />

    <EditText
        android:id="@+id/userType"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:drawableEnd="@drawable/ic_user_24"
        android:drawableRight="@drawable/ic_user_24"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:padding="5dp"
        android:text="@string/gender"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/userType" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="138dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="false"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="true"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/userType">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:drawableEnd="@drawable/ic_male_24"
            android:drawableRight="@drawable/ic_male_24"
            android:text="@string/male"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:drawableEnd="@drawable/ic_female_24"
            android:drawableRight="@drawable/ic_female_24"
            android:text="@string/female"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:padding="5dp"
        android:text="@string/date_of_birth"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <DatePicker
        android:id="@+id/agePicker"
        android:layout_width="240dp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        android:ems="10"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:padding="5dp"
        android:text="@string/weight"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <EditText
        android:id="@+id/weightType"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number|numberDecimal"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weight"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/measurement1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/weight_measure"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightType"
        app:layout_constraintStart_toEndOf="@+id/weightType" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:padding="5dp"
        android:text="@string/height"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/heightType"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number|numberDecimal"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/weightType" />

    <TextView
        android:id="@+id/measurement2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/height_measure"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightType"
        app:layout_constraintStart_toEndOf="@+id/heightType" />

    <Button
        android:id="@+id/nextProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/next"
        android:onClick="nextProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>